Fixed dark mode header shadow and min movie title height

--- a/src/SCSS/_card.scss
+++ b/src/SCSS/_card.scss
@@ -30,15 +30,9 @@
   padding: 20px;
   max-width: 80%;
   color: $font-color-light;
-  &:hover {
-    box-shadow: 0px 6px 10px $drop-shadow-light;
-  }
   &.dark-card {
     background-color: $background-color-card-dark;
     color: white;
     box-shadow: 0px 2px 4px $drop-shadow-dark;
-    &:hover {
-      box-shadow: 0px 6px 10px $drop-shadow-dark;
-    }
   }
 }
