--- a/src/SCSS/_header.scss
+++ b/src/SCSS/_header.scss
@@ -1,12 +1,16 @@
 #header-row {
+  font-weight: 600;
   box-shadow: 0px 2px 4px $drop-shadow-light;
-  height: 70px;
+  border-bottom: 1px solid $drop-shadow-light;
+  height: 100px;
   background-color: $background-color-header-light;
   color: $font-color-light;
+  position: relative;
   &.dark {
     background-color: $background-color-header-dark;
     color: $font-color-dark;
-    // box-shadow: 0px 2px 4px $drop-shadow-dark;
+    box-shadow: 0px 2px 4px $drop-shadow-dark;
+    border-bottom: 1px solid $drop-shadow-dark;
   }
 }
 
