--- a/src/SCSS/_movieTile.scss
+++ b/src/SCSS/_movieTile.scss
@@ -61,3 +61,8 @@
   border-radius: 5px;
   color: white;
 }
+
+.movie-tile-title {
+  min-height: 75px;
+  font-weight: 600;
+}
